# chest-reco

./: .gitignore  Readme.md  imgExtraction.py  inventaire.py  item.py  main.py  pyproject.toml  recette.py  requirement.txt  test.py
logs/: 19_10_25.json
numberReco/: numberReco.py
project/: main.py
project/imgExtraction/: imgExtraction.py
project/inv_gestion/: inventaire.py  item.py  recette.py
project/numberReco/: numberReco.py
project/ressources/logs/: 18_10_25.json  20_10_25.json
project/util/: util.py
src/: main.py
src/inv_gestion/: item.py
src/ressources/logs/: 21_10_25.json
src/util/: util.py
tests/: pytest.ini  requirement.txt
tests/integration_tests/: __init__.py  test_extractionInfoImage.py
tests/system_tests/: test_system.py
tests/system_tests/test_files/: response.txt
tests/unit_tests/: __init__.py  test_imgExtraction.py  test_inventaire.py  test_item.py  test_numberReco.py  test_util.py
